Add comprehensive Javadoc documentation and update README
This change adds thorough Javadoc documentation to the entire codebase, covering all subsystems, commands, and utility classes. Every class, method, and field now has a descriptive Javadoc comment, and all methods include `@param` and `@return` tags as required.

- Added full Javadoc coverage for all files in `subsystems`, `commands`, `utils`, and the root `frc.robot` package.
- Updated the main `README.md` to be a complete guide for new developers, with detailed sections on project overview, features, setup, and a descriptive controls layout.
- Removed the redundant `ElevatorManager.java` and the non-functional `CMD_RelativeLeftAlign.java` files to improve code quality.
- Fixed a drive inversion bug in `RobotContainer.java`.
- Fixed a logic error in `SUB_Elevator.java` related to the setpoint deadband.